# helical-bio-explorer

./: .env.example  .gitignore  DEVELOPMENT_JOURNAL.md  README.md  docker-compose.yml  package.json
.github/workflows/: backend-ci.yml  backend-deploy.yml  ci.yml  frontend-ci.yml
.husky/: commit-msg  pre-commit  pre-push
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_datasets_and_precompute_runs.py
backend/app/: dependencies.py  main.py
backend/app/api/: datasets.py  health.py
backend/app/api/v1/: __init__.py  disagreement.py  embeddings.py  provenance.py  schemas.py  scores.py  summary.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  datasets.py  provenance.py
backend/app/scripts/: __init__.py  seed_covid_dataset.py  seed_datasets.py  seed_precompute_runs.py  seed_sle_dataset.py
backend/app/services/: parquet_reader.py  parquet_store.py  version_resolver.py
backend/data/parquet/covid_wilk/: distance_scores.parquet
backend/data/parquet/pbmc3k/: geneformer_embeddings.parquet
backend/scripts/: ensure-prod-env.sh  setup-ec2.sh
backend/systemd/: helical-api.service
backend/tests/: conftest.py  test_api_v1.py  test_datasets.py  test_error_handlers.py  test_health.py  test_parquet_store.py  test_provenance.py
backend/tests/data/: __init__.py  test_covid_wilk_parquet_schemas.py  test_genept_disagreement_parquet_schemas.py
backend/tests/scripts/: __init__.py  test_generate_pbmc_baseline_parquet.py  test_seed_covid_dataset.py
docs/architecture/: ADR-007-engineering-standards.md  ADR-010-deployment.md  DIAGRAM-CI-CD.md  DIAGRAM-DATA-PIPELINE.md  DIAGRAM-REQUEST-FLOW.md  RUNTIME-FLOW.md
docs/friend-interview/: CALL-TRANSCRIPT-2026-04-10.md  FRIEND-BRIEF.md  FRIEND-QUESTIONS.md
docs/journal/: ENTRY-01-research-phase.md  ENTRY-02-foundation-skeleton.md  ENTRY-03-persistence-layer.md  ENTRY-04-s3-parquet-plumbing.md  ENTRY-05-fastapi-v1-parquet-api.md  ENTRY-05-precompute-colab-notebook.md  ENTRY-06-frontend-reference-dashboard.md  ENTRY-07-deployment-setup.md  ENTRY-08-pbmc-baseline-alive.md  ENTRY-09-pbmc-geneformer-notebook.md  ENTRY-10-covid-reference-projection.md  ENTRY-11-genept-disagreement.md  ENTRY-12-demo-polish.md  ENTRY-13-visualization-overhaul.md  ENTRY-14-landing-and-theme.md  ENTRY-14-readme-architecture-docs.md  ENTRY-15-disagreement-dual-axis.md  ENTRY-16-request-trace.md  ENTRY-17-pipeline-trace.md
docs/pull-requests/: PR-0.1.0-foundation-skeleton.md  PR-0.10.0-genept-disagreement.md  PR-0.10.0.1-hide-genept-toggle.md  PR-0.10.1-runbook.md  PR-0.11.0-demo-polish.md  PR-0.13.0-landing-and-theme.md  (+13 more)
frontend/: .dockerignore  .gitignore  Dockerfile  components.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json  vitest.config.ts
nginx/: helical-api.conf
notebooks/: README.md  emit_genept_notebook.py  precompute_covid_projection.ipynb  precompute_genept_disagreement.ipynb  precompute_pbmc_mvp.ipynb  precompute_reference_mapping.ipynb  requirements-colab.txt
scripts/: README.md  downsample_genept.py  e2e-compose-smoke.sh  generate_pbmc_baseline_parquet.py  requirements-baseline.txt
(+185 files in other folders)
