[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "helical-bio-explorer-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = ["fastapi", "uvicorn[standard]", "pydantic>=2", "pydantic-settings"]

[project.optional-dependencies]
dev = ["httpx", "pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
disallow_any_generics = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
