[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "helical-bio-explorer-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "boto3>=1.35.0",
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "aiosqlite>=0.20.0",
    "types-boto3[s3]",
    "moto[s3]>=5.0.0",
    "scanpy>=1.10,<1.11",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<2.0",
    "anndata>=0.10",
    "pandas-stubs>=2.2,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.mypy]
strict = true
python_version = "3.11"
disallow_any_generics = true
warn_return_any = true
plugins = ["pydantic.mypy"]
files = ["app", "tests", "../scripts/generate_pbmc_baseline_parquet.py"]

[[tool.mypy.overrides]]
module = ["scanpy.*", "anndata.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
